--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -95,7 +95,7 @@ body {
   width: 2rem;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 300px) and (max-width: 700px) {
   .fixed-header-wrapper {
     padding-left: 10px;
     padding-right: 10px;
