--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -32,6 +32,7 @@ html {
 
 body {
   background: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
 .fixed-header {
@@ -101,10 +102,43 @@ body {
 }
 
 .main-content {
-  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 12rem;
+  padding-right: 5rem;
+  padding-left: 5rem;
+}
+
+.about-us {
+  /* display: flex; */
+  width: 100%;
+}
+
+.row {
+  display: flex;
+  width: 100vw;
+  flex-direction: column;
+}
+
+.section-body {
+  text-align: justify;
+  display: flex;
+  width: 50vw;
+  height: 100%;
+}
+
+.section-heading {
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+  width: 50%;
 }
 
 @media screen and (min-width: 321px) and (max-width: 926px) {
+  .fixed-header {
+    height: 5rem;
+  }
+
   .fixed-header-wrapper {
     padding-left: 10px;
     padding-right: 10px;
