--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -14,6 +14,7 @@
     #633e69 0%,
     #050304 97.49%
   );
+  --content-padding: 10rem;
 }
 
 *,
@@ -51,14 +52,15 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: var(--content-padding);
+  padding-right: var(--content-padding);
 }
 
 .title-and-image {
   display: flex;
   align-items: center;
 }
+
 .map {
   width: 10rem;
   padding: 10px 0;
@@ -105,33 +107,55 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 12rem;
-  padding-right: 5rem;
-  padding-left: 5rem;
-}
-
-.about-us {
-  /* display: flex; */
-  width: 100%;
+  padding-right: var(--content-padding);
+  padding-left: var(--content-padding);
 }
 
 .row {
   display: flex;
-  width: 100vw;
-  flex-direction: column;
+  width: 100%;
+  margin-bottom: 20px;
+  column-gap: 30px;
 }
 
-.section-body {
-  text-align: justify;
+.right-side {
   display: flex;
-  width: 50vw;
+  flex-direction: column;
+  width: 50%;
   height: 100%;
 }
 
-.section-heading {
+.left-side {
   display: flex;
   flex-direction: column;
-  font-size: 1rem;
   width: 50%;
+  height: 100%;
+}
+
+.column-header {
+  font-size: 2.5rem;
+  background-color: #633e69;
+  color: white;
+  padding: 0.5rem;
+  margin-bottom: 1.2rem;
+}
+
+.column-text {
+  font-size: 1.3rem;
+  line-height: 1.5;
+}
+
+.text-justify {
+  text-align: justify;
+}
+.col-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.row-center {
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 321px) and (max-width: 926px) {
@@ -140,8 +164,14 @@ body {
   }
 
   .fixed-header-wrapper {
-    padding-left: 10px;
-    padding-right: 10px;
+    --content-padding: 10px;
+    padding-left: var(--content-padding);
+    padding-right: var(--content-padding);
+  }
+  .main-content {
+    --content-padding: 10px;
+    padding-left: var(--content-padding);
+    padding-right: var(--content-padding);
   }
 
   .menu-items-container {
@@ -163,7 +193,14 @@ body {
 
 @media screen and (min-width: 577px) and (max-width: 1300px) {
   .fixed-header-wrapper {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    --content-padding: 5rem;
+    padding-left: var(--content-padding);
+    padding-right: var(--content-padding);
+  }
+
+  .main-content {
+    --content-padding: 5rem;
+    padding-left: var(--content-padding);
+    padding-right: var(--content-padding);
   }
 }
