--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -14,7 +14,7 @@
     #633e69 0%,
     #050304 97.49%
   );
-  --content-padding: 10rem;
+  --content-padding: 5rem;
 }
 
 *,
@@ -34,6 +34,8 @@ html {
 body {
   background: #fff;
   font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 20px;
 }
 
 .fixed-header {
@@ -41,9 +43,9 @@ body {
   top: 0;
   left: 0;
   display: flex;
-  background: var(--bg-radial);
+  background-color: #5998c5;
   width: 100vw;
-  height: 10rem;
+  height: 126px;
   overflow: hidden;
 }
 
@@ -59,6 +61,13 @@ body {
 .title-and-image {
   display: flex;
   align-items: center;
+}
+.logo-text {
+  font-family: Caveat, sans-serif;
+  padding-left: 20px;
+  font-weight: 700;
+  font-size: 32px;
+  color: white;
 }
 
 .map {
@@ -76,23 +85,23 @@ body {
 .menu-items {
   list-style: none;
   display: flex;
-  font-size: 1.5rem;
+  font-size: 20px;
   gap: 1.5rem;
   color: white;
   cursor: pointer;
 }
 
 .menu-items li {
-  border-bottom: 3px solid transparent;
+  border-bottom: 5px solid transparent;
   padding-bottom: 10px;
 }
 
 .menu-items li.active {
-  border-bottom: 3px solid rgb(138, 99, 210);
+  border-bottom: 5px solid #da1e78;
 }
 
 .menu-items li:hover {
-  border-bottom: 3px solid rgb(138, 99, 210);
+  border-bottom: 5px solid #da1e78;
 }
 
 .hamburger-menu {
@@ -106,9 +115,14 @@ body {
 .main-content {
   display: flex;
   flex-direction: column;
-  margin-top: 12rem;
+  margin-top: 126px;
+  padding-top: 1rem;
   padding-right: var(--content-padding);
   padding-left: var(--content-padding);
+  background-color: white;
+  height: calc(100vh - 126px);
+  background: url("http://localhost:5500/img/background.svg") no-repeat center
+    1rem fixed;
 }
 
 .row {
@@ -118,26 +132,36 @@ body {
   column-gap: 30px;
 }
 
-.right-side {
+.info {
   display: flex;
   flex-direction: column;
   width: 50%;
-  height: 100%;
+  font-weight: lighter;
+}
+.text-area {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.7;
+  margin-top: 30px;
 }
 
-.left-side {
+.sub-heading {
+  font-size: 24px;
+  font-weight: 600;
+  padding-top: 28px;
+}
+.heading {
   display: flex;
-  flex-direction: column;
-  width: 50%;
-  height: 100%;
+  font-size: 36px;
+  color: black;
+  font-weight: 700;
 }
 
-.column-header {
-  font-size: 2.5rem;
-  background-color: #633e69;
-  color: white;
-  padding: 0.5rem;
-  margin-bottom: 1.2rem;
+.short-underline {
+  width: 50px;
+  height: 4px;
+  border: none;
+  background-color: #da1e78;
 }
 
 .column-text {
