--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -168,3 +168,9 @@ body {
 .text-justify {
   text-align: justify;
 }
+
+@media screen and (min-width: 1920px) {
+  .main-content {
+    background-position: 0px -20px;
+  }
+}
