--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,11 @@ body {
   cursor: pointer;
 }
 
+li a {
+  color: white;
+  text-decoration: none;
+}
+
 .menu-items li {
   border-bottom: 5px solid transparent;
   padding-bottom: 10px;
@@ -126,7 +131,7 @@ body {
   margin-left: 10px;
 }
 
-.button {
+a.button {
   display: flex;
   align-items: center;
   font-family: Poppins, sans-serif;
@@ -141,7 +146,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  cursor: pointer;
+  text-decoration: none;
 }
 
 .flex-justify-center {
