--- a/objectives/styles.css
+++ b/objectives/styles.css
@@ -1,4 +1,4 @@
 .main-content {
-  background: url("../img/girl-face.svg") no-repeat center 1rem fixed;
+  background: url("../img/girl-face-2.svg") no-repeat center 1rem fixed;
   background-size: cover;
 }
