--- a/objectives/styles.css
+++ b/objectives/styles.css
@@ -46,6 +46,18 @@
   vertical-align: text-top;
 }
 
+.img-wrapper {
+  display: flex;
+  position: absolute;
+  width: 30vw;
+  height: 90vh;
+  right: 0;
+  background-color: red;
+  background: url("img/girl-thin.svg");
+  background-repeat: no-repeat;
+  margin-top: -16px;
+}
+
 .sub-heading {
   padding: 0;
 }
