--- a/objectives/styles.css
+++ b/objectives/styles.css
@@ -58,6 +58,7 @@
   width: 20%;
   right: 0;
   margin-top: -16px;
+  overflow: hidden;
 
   background: url("img/girl-thin.svg");
   background-repeat: no-repeat;
